--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Ensure correct path -->
      
   </head>
-  <body style="background: #151515;">
+  <body style="background: #151515; min-height: 300vh;">
     <h1 style="color: white;">testTest</h1>
     <div class="gdpr-disclaimer" style="color: white;">This website uses cookies...</div>
     <button class="gdpr-button">Open Cookie Settings</button>
