--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
       </div>
       <button class="gb-save">Save Preferences</button>
     </div>
-
-    
+<form id="test-form" name="test-form">
+    <input type="text" id="test-input" name="test-input" placeholder="Enter your name">
+    <button type="submit">Submit</button>
+</form>
 <!-- Google tag (gtag.js) -->
 
 
