--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GDPR Consent Test</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="/JavaScript/chatgpt.js" defer></script>
+    <script src="chatgpt.js" defer></script>
     <!-- Ensure correct path -->
      
   </head>
