--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             j.async = true;
             j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
             f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-XXXXXXX');
+        })(window, document, 'script', 'dataLayer', 'G-9D3DBN91CX');
 
         // Display the cookie consent banner
         window.onload = function() {
