--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -24,7 +25,7 @@
         }
     </style>
 </head>
-<body cz-shortcut-listen="true">
+<body>
     <h1>Cookie Consent Example</h1>
 
     <div id="cookie-consent-banner" style="display: none;">
@@ -38,7 +39,7 @@
         <button onclick="submitConsent()">Submit</button>
     </div>
 
-    <script async="" src="https://www.googletagmanager.com/gtm.js?id=G-9D3DBN91CX"></script>
+    <script async src="https://www.googletagmanager.com/gtm.js?id=G-9D3DBN91CX"></script>
     <script>
         (function(w, d, s, l, i) {
             w[l] = w[l] || [];
