--- a/index.html
+++ b/index.html
@@ -1,171 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GDPR Consent Test</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="chatgpt.js" defer></script>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #151515;
-            color: white;
-            margin: 0;
-            padding: 0;
-        }
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #151515;
+        color: white;
+        margin: 0;
+        padding: 0;
+      }
 
-        .gdpr-banner {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            background-color: #333;
-            padding: 15px 20px;
-            box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.2);
-            z-index: 1000; /* Ensure it's on top */
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            font-size: 14px;
-        }
+      .gdpr-banner {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        background-color: #333;
+        padding: 15px 20px;
+        box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.2);
+        z-index: 1000; /* Ensure it's on top */
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        font-size: 14px;
+      }
 
-        .gdpr-content {
-            display: none;
-            position: fixed;
-            bottom: 60px; /* Adjust if needed */
-            left: 20px;
-            background-color: #333;
-            padding: 15px;
-            border-radius: 8px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
-            z-index: 1000; /* Ensure it's on top */
-        }
+      .gdpr-content {
+        display: none;
+        position: fixed;
+        bottom: 60px; /* Adjust if needed */
+        left: 20px;
+        background-color: #333;
+        padding: 15px;
+        border-radius: 8px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+        z-index: 1000; /* Ensure it's on top */
+      }
 
-        .gdpr-disclaimer {
-            flex: 1;
-            margin-right: 20px;
-        }
+      .gdpr-disclaimer {
+        flex: 1;
+        margin-right: 20px;
+      }
 
-        .gdpr-button {
-            background-color: #4CAF50;
-            border: none;
-            color: white;
-            padding: 10px 20px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 14px;
-            cursor: pointer;
-            border-radius: 4px;
-            transition: background-color 0.3s ease;
-        }
+      .gdpr-button {
+        background-color: #4caf50;
+        border: none;
+        color: white;
+        padding: 10px 20px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 14px;
+        cursor: pointer;
+        border-radius: 4px;
+        transition: background-color 0.3s ease;
+      }
 
-        .gdpr-button:hover {
-            background-color: #45a049;
-        }
+      .gdpr-button:hover {
+        background-color: #45a049;
+      }
 
-        .gdpr-option {
-            margin-top: 10px;
-        }
+      .gdpr-option {
+        margin-top: 10px;
+      }
 
-        .gdpr-option ul {
-            list-style-type: none;
-            padding: 0;
-        }
+      .gdpr-option ul {
+        list-style-type: none;
+        padding: 0;
+      }
 
-        .gdpr-option ul li {
-            margin-bottom: 5px;
-        }
+      .gdpr-option ul li {
+        margin-bottom: 5px;
+      }
 
-        .gdpr-option ul li label {
-            cursor: pointer;
-            display: inline-block;
-            vertical-align: middle;
-        }
+      .gdpr-option ul li label {
+        cursor: pointer;
+        display: inline-block;
+        vertical-align: middle;
+      }
 
-        .gb-save {
-            background-color: #008CBA;
-            border: none;
-            color: white;
-            padding: 10px 20px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 14px;
-            cursor: pointer;
-            border-radius: 4px;
-            transition: background-color 0.3s ease;
-            margin-top: 10px;
-        }
+      .gb-save {
+        background-color: #008cba;
+        border: none;
+        color: white;
+        padding: 10px 20px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 14px;
+        cursor: pointer;
+        border-radius: 4px;
+        transition: background-color 0.3s ease;
+        margin-top: 10px;
+      }
 
-        .gb-save:hover {
-            background-color: #00688B;
-        }
+      .gb-save:hover {
+        background-color: #00688b;
+      }
 
-        /* Adjust form styling */
-        #test-form {
-            margin-top: 20px;
-            text-align: center;
-        }
+      /* Adjust form styling */
+      #test-form {
+        margin-top: 20px;
+        text-align: center;
+      }
 
-        #test-input {
-            padding: 10px;
-            margin-right: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            font-size: 14px;
-        }
+      #test-input {
+        padding: 10px;
+        margin-right: 10px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        font-size: 14px;
+      }
 
-        #test-form button {
-            background-color: #008CBA;
-            border: none;
-            color: white;
-            padding: 10px 20px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 14px;
-            cursor: pointer;
-            border-radius: 4px;
-            transition: background-color 0.3s ease;
-        }
+      #test-form button {
+        background-color: #008cba;
+        border: none;
+        color: white;
+        padding: 10px 20px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 14px;
+        cursor: pointer;
+        border-radius: 4px;
+        transition: background-color 0.3s ease;
+      }
 
-        #test-form button:hover {
-            background-color: #00688B;
-        }
+      #test-form button:hover {
+        background-color: #00688b;
+      }
     </style>
-</head>
-<body>
-    <h1 style="color: white; text-align: center;">GDPR Consent Test</h1>
+  </head>
+  <body>
+    <h1 style="color: white; text-align: center"></h1>
 
     <div class="gdpr-banner">
-        <div class="gdpr-disclaimer">This website uses cookies to ensure you get the best experience on our website.</div>
-        <button class="gdpr-button">Cookie Settings</button>
+      <div class="gdpr-disclaimer">
+        This website uses cookies to ensure you get the best experience on our
+        website.
+      </div>
+      <button class="gdpr-button">Cookie Settings</button>
     </div>
 
     <div class="gdpr-content">
-        <div class="gdpr-option go-2">
-            <ul>
-                <li data-type="analytics" class="gdpr-select">
-                    <input type="checkbox" id="analytics" />
-                    <label for="analytics">Enable Analytics Cookies</label>
-                </li>
-                <li data-type="advertising" class="gdpr-select">
-                    <input type="checkbox" id="advertising" />
-                    <label for="advertising">Enable Advertising Cookies</label>
-                </li>
-            </ul>
-        </div>
-        <button class="gb-save">Save Preferences</button>
+      <div class="gdpr-option go-2">
+        <ul>
+          <li data-type="analytics" class="gdpr-select">
+            <input type="checkbox" id="analytics" />
+            <label for="analytics">Enable Analytics Cookies</label>
+          </li>
+          <li data-type="advertising" class="gdpr-select">
+            <input type="checkbox" id="advertising" />
+            <label for="advertising">Enable Advertising Cookies</label>
+          </li>
+        </ul>
+      </div>
+      <button class="gb-save">Save Preferences</button>
     </div>
 
     <form id="test-form" name="test-form">
-        <input type="text" id="test-input" name="test-input" placeholder="Enter your name">
-        <button type="submit">Submit</button>
+      <input
+        type="text"
+        id="test-input"
+        name="test-input"
+        placeholder="Enter your name"
+      />
+      <button type="submit">Submit</button>
     </form>
 
     <!-- Google tag (gtag.js) -->
     <!-- Make sure to include your Google Analytics script here -->
-</body>
+  </body>
 </html>
